--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
+[package]
+name = "findag"
+version = "0.1.0"
+edition = "2021"
+
 [dependencies]
-prometheus = "0.13"
-prometheus_exporter = "0.8"
-jsonwebtoken = "9.2"
-axum-extra = "0.9"
-tower-http = "0.5"
-# ... existing dependencies ... 
+tokio = { version = "1.0", features = ["full"] }
+axum = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+fastrand = "1.9" 
