--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,21 @@ path = "src/bin/fund_accounts.rs"
 name = "send_valid_txs"
 path = "src/bin/send_valid_txs.rs"
 
+[[bin]]
+name = "check_balances"
+path = "check_balances.rs"
+
+[[bin]]
+name = "test_bot"
+path = "src/bin/test_bot.rs"
+
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 axum = { version = "0.7", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 fastrand = "1.9"
-rand_core = "0.6.4"
+rand_core = "0.5"
 ed25519-dalek = { version = "1.0", features = ["serde"] }
 curve25519-dalek = "3.2"
 bincode = "1.3"
@@ -57,7 +65,7 @@ libp2p-kad = "0.45"
 libp2p-noise = "0.44"
 prometheus = "0.13"
 lazy_static = "1.4"
-rand = "0.8"
+rand = "0.7"
 libp2p-identity = "0.2.8"
 threadpool = "1.8"
 tower-http = { version = "0.5", features = ["cors"] }
@@ -68,6 +76,7 @@ rpassword = "7.3"
 clap = { version = "4.4", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json"] }
 base64 = "0.21"
+anyhow = "1.0"
 
 [dev-dependencies]
 tempfile = "3.8" 
