--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ path = "src/bin/audit_test.rs"
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
-axum = { version = "0.7", features = ["macros"] }
+axum = { version = "0.7", features = ["macros", "ws"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 fastrand = "1.9"
@@ -117,6 +117,11 @@ toml = "0.8"
 num_cpus = "1.16"
 uuid = { version = "1.0", features = ["v4"] }
 thiserror = "1.0"
+tokio-stream = "0.1"
+futures = "0.3"
+otpauth = "0.5.1"
+base32 = "0.4"
+tower = "0.5.2"
 
 [dev-dependencies]
 tempfile = "3.8" 
