--- a/findag-ui/package.json
+++ b/findag-ui/package.json
@@ -7,27 +7,34 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "type-check": "tsc --noEmit"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "zustand": "^4.3.8",
     "axios": "^1.4.0",
-    "recharts": "^2.6.2",
-    "vis-network": "^9.1.6",
-    "lucide-react": "^0.263.1",
     "clsx": "^1.2.1",
-    "tailwind-merge": "^1.13.2",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "socket.io-client": "^4.7.2"
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.6.2",
+    "socket.io-client": "^4.7.2",
+    "tailwind-merge": "^1.13.2",
+    "vis-network": "^9.1.6",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/vis": "^4.21.0",
@@ -38,9 +45,12 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
-} 
+}
